--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="">
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/Yati24/Portfolio/blob/main/CV%20Tom%20Cabaye%20Octobre%202025.pdf">
                         <i class="fas fa-download me-2"></i>
                         Mon CV
                     </a>
