--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/schtroumpf.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -87,7 +87,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/rapcarte.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -96,7 +96,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/beatmaker.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -201,7 +201,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/schtroumpf-mosaique.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Application web pour aider Gargamel à localiser les schtroumpfs sur une carte. Carte interactive avec position des schtroumpfs, possibilité d'en ajouter des nouveaux. Utilisation de <b>HTML, CSS, JavaScript, Leaflet, Python et FastAPI</b><br>
                                     Réalisé en cours à My Digital School Lille avec <a href="https://github.com/AurelienDillies">Aurélien Dillies</a> <br>
@@ -236,7 +236,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/rapcarte-mosaique.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Projet Final pour le CS50 d'Harvard, Application web qui permet de visualiser et de placer des rappeurs sur la carte du monde. Gestion des utilisateurs et page admin. Utilisation de <b>HTML, CSS, JavaScript, Leaflet, Python et Flask</b><br>
                                     08/2025<br>
@@ -270,14 +270,13 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/beatmaker-mosaique.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Application ayant pour but d'aider les beatmakers en gérant un annuaire de rappeurs,
                                     manageurs, labels, etc... Permet de gérer ses instrumentales, les classer par catégories et
                                     permet d'envoyer des mails personnalisés contenant les instrumentales choisies aux
-                                    destinataires choisis. Utilisation de <b>HTML, Bootstrap, NodeJS et TypeScript</b><br>
-                                    04/2025<br>
-                                    <a href="https://github.com/Yati24">GitHub</a></p>
+                                    destinataires choisis. Utilisation de <b>HTML, Tailwind, NodeJS et TypeScript</b><br>
+                                    04/2025 - 05/2025<br></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Fermer la fenêtre
